--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body style="text-align: center;">
 		<p>Grafikai tervezés, Mozgóképek, Videó- és filmgrafika, Webdesign, 3D, Animáció, Játékok, Szoftvermérnök</p>
-		<p><a href="mailto:mindenesbudapest@protonmail.com" title="Beszélj hozzám / Talk to me">Üdvözlöm / Hello</a></p>
+		<p><a href="mailto:mindenesbudapest@protonmail.com" title="Beszélj hozzám / Talk to me">Üdvözlöm! Beszélj hozzám / Hello! Talk to me</a></p>
 		<p>Egy kicsit mindenből / A little bit of everything</p>
 	</body>
 </html>
